# NinjaClown

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO
.github/workflows/: ci.yml
bindings/c/ninja_clown/: api.h  helpers.h
bindings/rust/: Cargo.toml
bindings/rust/ninja_clown_bot/: Cargo.toml
bindings/rust/ninja_clown_bot/src/: api.rs  decision.rs  entity.rs  lib.rs  map.rs
bindings/rust/ninja_clown_bot_sys/: Cargo.toml  build.rs  wrapper.h
bot_interface/: bot.c  bot.h  helpers.c  helpers.h
bots/: test.c
bots/rust-bot/: Cargo.toml
bots/rust-bot/src/: api.rs  bot.rs  ffi.rs  lib.rs  map.rs
cmake/: common.cmake  config.cmake  cpptoml.cmake  fmt.cmake  imgui-sfml.cmake  imterm.cmake  spdlog.cmake
examples/: basic.c
examples/rust-bot/: Cargo.toml
examples/rust-bot/src/: api.rs  bot.rs  lib.rs  path.rs
include/: dll.hpp  program_state.hpp  state_holder.hpp  terminal_commands.hpp  terminal_ids.hpp  utils.hpp
include/adapter/: adapter.hpp
include/bot/: bot_api.hpp  bot_dll.hpp  bot_factory.hpp  bot_factory_impl.tpp
include/model/: actionable.hpp  activator.hpp  button.hpp  cell.hpp  collision.hpp  components.hpp  grid.hpp  grid_iterator.hpp  grid_point.hpp  interactable.hpp  interaction.hpp  model.hpp  vec2.hpp  world.hpp
include/model/interactables/: button.hpp
include/utils/: dll.hpp  logging.hpp  macros.hpp  optional.hpp  resource_manager.hpp  resources_type.hpp  scope_guards.hpp  spinlock.hpp  synchronized.hpp  universal_constants.hpp  utils.hpp  visitor.hpp
include/view/: animation.hpp  dialogs.hpp  facing_dir.hpp  fps_limiter.hpp  map.hpp  mob.hpp  mob_animations.hpp  object.hpp  overmap_collection.hpp  overmap_displayable.hpp  viewer.hpp  viewer_display_state.hpp
resources/: map_test.map
resources/configured_resources/: assets-2d.toml  assets-iso.toml  config.toml  simple-assets.toml
resources/configured_resources/lang/: en.toml  fr.toml
resources/configured_resources/maps/map_test/texture_pack/: resource_pack.toml
resources/configured_resources/resource packs/prgmr - 2d/: resource_pack.toml
resources/configured_resources/resource packs/prgmr - iso/: resource_pack.toml
resources/raw_resources/: config.toml  map_test.map
resources/raw_resources/maps/map_test/: map.toml  map_test.map  map_test_2.map
src/: dll.cpp  main.cpp  program_state.cpp  state_holder.cpp  state_holder.hpp  terminal_commands.cpp  terminal_commands.hpp
src/adapter/: adapter.cpp  adapter.hpp  adapter_classes.hpp  adapter_map_loader_v1_0_0.cpp  adapter_map_saver_v1_0_0.cpp  adapter_mapfile_constants.hpp  facing_dir.cpp  facing_dir.hpp
src/bot/: bot_api.cpp  bot_api.hpp  bot_dll.cpp  bot_dll.hpp
src/model/: actionable.cpp  actionable.hpp  activator.hpp  button.cpp  cell.hpp  collision.cpp  collision.hpp  components.hpp  event.cpp  event.hpp  grid.cpp  grid.hpp  grid_point.hpp  interaction.hpp  model.cpp  model.hpp  systems.cpp  systems.hpp  types.hpp  vec2.cpp  world.cpp  world.hpp
src/utils/: dll.cpp  logging.cpp  logging.hpp  loop_per_sec_limit.cpp  loop_per_sec_limit.hpp  optional.hpp  resource_manager.cpp  resource_manager.hpp  resources_type.hpp  synchronized.hpp  system.cpp  system.hpp  universal_constants.hpp  utils.hpp
src/view/: animation.cpp  animation.hpp  configurator.cpp  configurator.hpp  dialogs.cpp  event_inspector.cpp  event_inspector.hpp  facing_dir.cpp  facing_dir.hpp  file_explorer.cpp  file_explorer.hpp  fps_limiter.cpp  fps_limiter.hpp  game_viewer.cpp  game_viewer.hpp  imgui_styles.cpp  imgui_styles.hpp  map.cpp  map.hpp  map_explorer.cpp  map_explorer.hpp  map_viewer.cpp  map_viewer.hpp  menu.cpp  menu.hpp  mob.hpp  mob_animations.cpp  mob_animations.hpp  mob_object.cpp  object.hpp  overmap_collection.cpp  overmap_collection.hpp  overmap_displayable.hpp  view.cpp  view.hpp  viewer.cpp  viewer.hpp  viewer_display_state.hpp
src/view/assets/: animation.cpp  animation.hpp  mob_animations.hpp
src/view/game/: game_menu.cpp  game_menu.hpp  game_viewer.cpp  game_viewer.hpp  map.cpp  map.hpp  map_viewer.cpp  map_viewer.hpp  mob.cpp  mob.hpp  object.cpp  object.hpp  overmap_collection.cpp  overmap_collection.hpp  overmap_displayable.hpp
src/view/map_editor/: map_editor.cpp  map_editor.hpp
src/view/standalones/: configurator.cpp  file_explorer.cpp  file_explorer.hpp  imgui_styles.cpp  mouse_position.cpp  mouse_position.hpp
tests/: collisions.cpp
